<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Universal Yoga</string>
    <string name="add_new_class">Add new class</string>
    <string name="search">Search</string>
    <string name="search_classes">Search classes</string>
    <string name="course_type">Type:</string>
    <string name="course_schedule">Schedule:</string>
    <string name="course_duration">Duration:</string>
    <string name="course_capacity">Capacity:</string>
    <string name="course_price">Price:</string>
    <string name="course_description">Description:</string>
    <string name="title_scheduled_classes">Scheduled Classes</string>
    <string name="string_add_new_class">Add new class</string>
    <string name="hint_course_type">Type*</string>
    <string name="hint_course_day_of_week">Day of Week*</string>
    <string name="hint_course_time">Time*</string>
    <string name="hint_course_duration">Duration (minutes)*</string>
    <string name="hint_course_capacity">Capacity*</string>
    <string name="hint_course_price">Price (£)*</string>
    <string name="hint_course_description">Description</string>
    <string name="title_courses">Courses</string>
    <string name="string_add_new_course">Add new course</string>
    <string name="search_tab_teacher">Teacher</string>
    <string name="search_tab_date">Date</string>
    <string name="search_tab_day">Day</string>
    <string name="search_hint_teacher">Enter teacher name</string>
    <string name="search_hint_date">Select date</string>
    <string name="search_hint_day">Select day</string>
    <string name="string_no_results_found">No results found</string>
    <string name="title_add_new_class">Add New Class</string>
    <string name="hint_class_date">Date</string>
    <string name="hint_class_teacher">Teacher</string>
    <string name="hint_class_comments">Comments (Optional)</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="string_class_options">Class options</string>
    <string name="string_search_details">Details...</string>
    <string name="string_course_details">Details...</string>
    <string name="string_edit_class">Edit Class</string>
    <string name="string_delete_class">Delete Class</string>
    <string name="string_edit_course">Edit Course</string>
    <string name="string_edit_this_course">Edit this course</string>
    <string name="string_delete_course">Delete Course</string>
    <string name="string_delete_this_course">Delete this course</string>
    <string name="string_save_form">Save</string>
    <string name="string_upload_to_server">Upload to Server</string>
    <string name="string_search_button">Search</string>
    <string name="string_search_classes">Search classes</string>
    <string name="string_reset_button">Reset Database</string>
    <string name="string_reset_database">Reset the local database</string>
</resources>